fixed blog width on mobile

--- a/src/components/css/blog.css
+++ b/src/components/css/blog.css
@@ -1,29 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@200&display=swap');
 
-
-:root{
-    --main-font-poppins345: 'Poppins', sans-serif;
-    --main-color: hsla(32, 100%, 45%, 1);
-    --text-color: hsla(0, 0%, 99%, 0.9);
-    --DefaultColor: hsla(173, 96%, 100%, 0.9);
-
-    --menu-color: hsla(173, 96%, 100%, 0.9);
-
-
-    --darkbackground: #22272e;
-    --text-white: hsla(0, 0%, 99%, 0.9);
-    --whitebackground: hsla(0, 0%, 99%, 0.9);
-
-    --footerbg: rgba(223, 220, 220, 0.52);
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
-}
 
 .blog__container{
 
@@ -106,7 +82,7 @@
     
     .blog__container{
 
-        padding: 0;
+        padding: 0 0 5rem 0;
         width: 100%;
 
     }
